# grin-miner

./: Cargo.toml  azure-pipelines.yml  grin-miner.toml
.ci/: release.yml
config/: Cargo.toml
config/src/: config.rs
cuckoo-miner/: Cargo.toml
cuckoo-miner/src/: build.rs
cuckoo-miner/src/config/: types.rs
cuckoo-miner/src/cuckoo_sys/: ffi.rs
cuckoo-miner/src/cuckoo_sys/plugins/: CMakeLists.txt
cuckoo-miner/src/cuckoo_sys/plugins/cmake/: CudaComputeTargetFlags.cmake  find_cuda.cmake
cuckoo-miner/src/miner/: miner.rs  types.rs  util.rs
ocl_cuckaroo/: Cargo.toml
ocl_cuckaroo/src/: lib.rs  main.rs  trimmer.rs
ocl_cuckatoo/: Cargo.toml
ocl_cuckatoo/src/: lib.rs  trimmer.rs
plugin/: Cargo.toml
util/: Cargo.toml
util/src/: logger.rs
