[package]
name = "ocl_cuckaroo"
version = "2.0.0"
workspace = ".."
edition = "2024"

[features]
profile = []


[dependencies]
blake2-rfc = "0.2"
byteorder = "1"
grin_miner_plugin = { path = "../plugin", version = "5.0.0" }
libc = "0.2"
hashbrown = "0.16"
ocl = "0.19"

[lib]
name = "ocl_cuckaroo"
crate-type = ["cdylib", "rlib"]
