[package]
name = "ocl_cuckatoo"
version = "2.0.0"
workspace = ".."
edition = "2024"

[dependencies]
blake2-rfc = "0.2"
byteorder = "1"
grin_miner_plugin = { path = "../plugin", version = "5.0.0" }
libc = "0.2"
ocl = "0.19"
hashbrown = "0.16"

[lib]
name = "ocl_cuckatoo"
crate-type = ["cdylib", "rlib"]
